# epc

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.in  epc  epc.1  epcf  epcrc  main.c
functions/: battplug  battstate  exitface  fdate  files  filesall  fsize  fsizeall  fuptime  tdir  term  termfull  users
